# personal-assistant-os

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOPING.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release.yml
deploy/launchd/: com.myos.pulse.plist  com.myos.scheduler.plist  com.myos.sync.plist
docs/: BOUNDED_AUTONOMY.md  MIGRATIONS.md  RECOVERY.md
examples/: demo-local.md  demo-zero-proof.md
scripts/: install.sh  uninstall.sh
src/personal_assistant/: __init__.py  agentcore.py  approval_context.py  assistant.py  autonomy.py  autonomy_loop.py  autopilot.py  claims.py  cli.py  cli_agent.py  cli_autonomy.py  cli_autopilot.py  cli_chat.py  cli_diagnostics.py  cli_em.py  cli_factory.py  cli_health.py  cli_install.py  cli_knowledge.py  cli_launchd.py  cli_local_data.py  cli_operations.py  cli_planning.py  cli_reminders.py  cli_review.py  cli_runtime.py  cli_setup_live.py  cli_workflow.py  command_registry.py  context.py  dashboard.py  data_dirs.py  db.py  em.py  entities.py  execution.py  extraction.py  factory.py  graph.py  graphrag.py  (+22 more)
src/personal_assistant/connectors/: __init__.py  aha.py  base.py  confluence.py  github.py  jira.py
src/personal_assistant/ingest/: audio.py  image.py
src/personal_assistant/providers/: __init__.py  agent_cli.py  claude.py  claude_code.py  claude_sdk.py  copilot.py  cursor.py  zero.py
tests/: test_assistant.py  test_autonomy.py  test_autonomy_loop.py  test_backlog.py  test_cli.py  test_cli_install.py  test_command_registry.py  test_connectors.py  test_context.py  test_data_dirs.py  test_em.py  test_entities.py  test_graphrag.py  test_graphrag_evals.py  test_launchd_modes.py  test_model_setup.py  test_observability.py  test_postrefactor.py  test_providers.py  test_relationships.py  test_remediation.py  test_reminders.py  test_retrieval_graph.py  test_router.py  test_watch.py
tests/fixtures/: graphrag_eval_cases.json
